feat: add book to user and update api spec
closes #8
